      last-modified value of a line to one of the revisions that modified
      it, rather than a merge revision. This would happen when both sides
      claimed to have modified the line resulting in the same text. The
      choice is arbitrary but stable, so merges in different directions
      will get the same results.  (John Arbash Meinel, #232188)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

  INTERNALS:


bzr 1.6rc1 2008-08-06
---------------------

This release candidate for bzr 1.6 solidifies the new branch stacking
feature.  Bazaar now recommends that users upgrade all knit repositories,
because later formats are much faster.  However, we plan to continue read/write and
upgrade support for knit repostories for the forseeable future.  Several
other bugs and performance issues were fixed.

  CHANGES:

    * Knit format repositories are deprecated and bzr will now emit
      warnings whenever it encounters one.  Use ``bzr upgrade`` to upgrade
      knit repositories to pack format.  (Andrew Bennetts)
      
  IMPROVEMENTS:

    * ``bzr check`` can now be told which elements at a location it should
      check.  (Daniel Watkins)

    * Commit now supports ``--exclude`` (or ``-x``) to exclude some files
      from the commit. (Robert Collins, #3117)

    * Fetching data between repositories that have the same model but no 
      optimised fetcher will not reserialise all the revisions, increasing
      performance. (Robert Collins, John Arbash Meinel)

    * Give a more specific error when target branch is not reachable.
      (James Westby)

    * Implemented a custom ``walkdirs_utf8`` implementation for win32.
      This uses a pyrex extension to get direct access to the
      ``FindFirstFileW`` style apis, rather than using ``listdir`` +
      ``lstat``. Shows a very strong improvement in commands like
      ``status`` and ``diff`` which have to iterate the working tree.